Flowmini/flowmini_v21_structural_bridge/examples/fail/bad_record_missing_field.flow
module bad_record_missing_field

type Point {
    field x : int
    field y : int
}

main {
    p : Point({x:10})
    print 1
}
